<resources>
    <string name="app_name">ContactsIT3660</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnUploadToDropbox">Dropbox</string>
    <string name="txtFileName">Put filename</string>
    <string name="btnUploadToGoogleDrive">Google Drive</string>
    <string name="btn_back_up">Back up</string>
    <string name="btn_contacts">Contacts</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_exits">Exit</string>
    <string name="btnDownloadFromGoogleDrive">Google Drive</string>
    <string name="btnRestore">Restore</string>
    <string name="btnDownloadFromDropbox">Dropbox</string>
    <string name="btnDeleteAllContacts">Delete All Contacts (nhớ backup trước khi ấn)</string>
    <string name="rbDropbox">Dropbox</string>
    <string name="rbGoogleDrive">Google Drive</string>
    <string name="title_activity_display_contacts">DisplayContacts</string>
</resources>
