<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingTop="100dp"
    >


    <!--<Button-->
        <!--android:background="@drawable/blue_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/btnDownloadFromDropbox"-->
        <!--android:id="@+id/btnDownloadFromDropbox"-->
        <!--style="@style/button_text"-->
        <!--android:layout_marginTop="189dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--&lt;!&ndash;/>&ndash;&gt;-->

    <!--<Button-->
        <!--android:background="@drawable/blue_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/btnDownloadFromGoogleDrive"-->
        <!--android:id="@+id/btnDownloadFromGoogleDrive"-->
        <!--style="@style/button_text"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

    <RadioGroup
        android:id="@+id/rgCloud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="40dp"
        >

        <RadioButton
            android:id="@+id/rbDropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDropbox"
            />

        <RadioButton
            android:id="@+id/rbGoogleDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbGoogleDrive"
            />

    </RadioGroup>

    <Button
        android:background="@drawable/blue_button"
        android:layout_below="@+id/rgCloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRestore"
        android:id="@+id/btnGo"
        style="@style/button_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@drawable/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteAllContacts"
        android:id="@+id/btnDeleteAllContacts"
        style="@style/button_text"
        android:layout_marginTop="185dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>