<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/tv_text_danhba"
                android:background="@color/tv_danhba"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Ứng dụng danh bạ"
                android:id="@+id/tvText"
                android:layout_marginBottom="25dp"/>

            <Button
                style="@style/button_text"
                android:background="@drawable/blue_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_contacts"
                android:id="@+id/btnContacts"
                android:layout_gravity="center_horizontal"
                android:onClick="btnContacts"
                />

            <Button
                style="@style/button_text"
                android:background="@drawable/blue_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_back_up"
                android:id="@+id/btnBackup"
                android:layout_gravity="center_horizontal"
                android:onClick="btnBackup"
                />

            <Button
                style="@style/button_text"
                android:background="@drawable/blue_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_restore"
                android:id="@+id/btnRestore"
                android:layout_gravity="center_horizontal"
                android:onClick="btnRestore"
                />

            <Button
                style="@style/button_text"
                android:background="@drawable/blue_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_upload"
                android:id="@+id/btnUpload"
                android:layout_gravity="center_horizontal"
                android:onClick="btnUpload"
                />

            <Button
                style="@style/button_text"
                android:background="@drawable/blue_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_exits"
                android:id="@+id/btnExit"
                android:layout_gravity="center_horizontal"
                android:onClick="btnExit"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvContact"
                android:background="#000"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
</LinearLayout>
